<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="labelA">A</string>
    <string name="labelB">B</string>
    <string name="labelAB">A ^ B</string>
    <string name="labelT">T</string>
    <string name="labelF">F</string>
    <string name="submitButtonText">Submit</string>
    <string name="answerscorrect">Correct!</string>
    <string name="answersincorrect">You suck you got answer %d wrong </string>
</resources>